--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "React Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --open"
+  },
+  "babel": {  
+    "presets": ["env", "react"]
   },
   "repository": {
     "type": "git",
